<resources>
    <string name="app_name">Rest_api_demo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="login_label"><b>Login</b></string>
    <string name="hint_email">Please Enter Email Address</string>
    <string name="hint_password">Please Enter Password</string>
    <string name="hint_ConfirmPassword">Confirm Password</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_location">Location</string>
    <string name="register_label">Register</string>
    <string name="text_forgetPassword"><i><u>Forget Password!</u></i></string>


    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>

</resources>