<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.registerFragment">

    <TextView
        android:id="@+id/txt_register_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-1dp"
        android:text="@string/register_label"
        android:textColor="@color/purple_500"
        android:textSize="45sp" />

    <EditText
        android:id="@+id/edt_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_register_label"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_email"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edt_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_register_email"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_password"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edt_register_CPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_register_password"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_ConfirmPassword"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edt_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_register_CPassword"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_name"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edt_register_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_register_name"
        android:inputType="text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_location"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_register_location"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/register_label"
        android:textSize="25sp" />

</RelativeLayout>