<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginLayout"
    tools:context=".fragments.loginFragment">

    <TextView
        android:id="@+id/txt_login_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:text="@string/login_label"
        android:textColor="@color/purple_500"
        android:textSize="45sp" />

    <EditText
        android:id="@+id/edt_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_login_label"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_email"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edt_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_login_email"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_password"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:textSize="25sp"
        android:text="@string/login_label"
        android:layout_below="@+id/edt_login_password"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_register"
        android:text="@string/register_label"
        android:textSize="25sp"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_forgetPassword"
        android:text="@string/text_forgetPassword"
        android:textSize="25sp"
        android:layout_below="@id/txt_register"
        android:layout_marginTop="20dp"
        android:textColor="@color/purple_500"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>